Make class public so it can be accessed indirectly via reflection